some cleanup and object distance stuff

--- a/MemLib.Ffxiv/MemLib.Ffxiv.csproj
+++ b/MemLib.Ffxiv/MemLib.Ffxiv.csproj
@@ -34,25 +34,22 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Numerics" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Enums\ActionType.cs" />
-    <Compile Include="Enums\ClassJobType.cs" />
-    <Compile Include="Enums\EquipmentSlot.cs" />
-    <Compile Include="Enums\GameObjectType.cs" />
-    <Compile Include="Enums\GatheringType.cs" />
-    <Compile Include="Enums\InventoryBagId.cs" />
-    <Compile Include="Enums\MateriaType.cs" />
-    <Compile Include="Enums\PlayerIcon.cs" />
-    <Compile Include="Enums\StatusFlags.cs" />
-    <Compile Include="Enums\World.cs" />
+    <Compile Include="Enumerations\ActionType.cs" />
+    <Compile Include="Enumerations\ClassJobType.cs" />
+    <Compile Include="Enumerations\EquipmentSlot.cs" />
+    <Compile Include="Enumerations\GameObjectType.cs" />
+    <Compile Include="Enumerations\GatheringType.cs" />
+    <Compile Include="Enumerations\InventoryBagId.cs" />
+    <Compile Include="Enumerations\MateriaType.cs" />
+    <Compile Include="Enumerations\PlayerIcon.cs" />
+    <Compile Include="Enumerations\StatusFlags.cs" />
+    <Compile Include="Enumerations\World.cs" />
     <Compile Include="FfxivProcess.cs" />
     <Compile Include="Objects\SpellCastInfo.cs" />
-    <Compile Include="Test.cs" />
-    <Compile Include="XivApi\JsonParser.cs" />
     <Compile Include="Managers\GameObjectManager.cs" />
     <Compile Include="Managers\InventoryManager.cs" />
     <Compile Include="Objects\Aetheryte.cs" />
@@ -67,7 +64,7 @@
     <Compile Include="Objects\LocalPlayer.cs" />
     <Compile Include="Objects\Minion.cs" />
     <Compile Include="Objects\RemoteObject.cs" />
-    <Compile Include="Objects\Stats.cs" />
+    <Compile Include="Structures\Stats.cs" />
     <Compile Include="Objects\Treasure.cs" />
     <Compile Include="Offsets\OffsetManager.cs" />
     <Compile Include="Offsets\Signature.cs" />
@@ -76,12 +73,7 @@
     <Compile Include="Offsets\Structs\PlayerInfoOffsets.cs" />
     <Compile Include="Offsets\Offsets.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="XivApi\Endpoints\CharacterEndpoint.cs" />
-    <Compile Include="XivApi\Endpoints\ItemsEndpoint.cs" />
-    <Compile Include="XivApi\ResultObjects\ItemListResult.cs" />
-    <Compile Include="XivApi\ResultObjects\ItemListResultEntry.cs" />
-    <Compile Include="XivApi\ResultObjects\Pagination.cs" />
-    <Compile Include="XivApi\XivApiClient.cs" />
+    <Compile Include="Structures\Vector3.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MemLib\MemLib.csproj">
