--- a/MemLib.Ffxiv/MemLib.Ffxiv.csproj
+++ b/MemLib.Ffxiv/MemLib.Ffxiv.csproj
@@ -49,8 +49,10 @@
     <Compile Include="Enumerations\StatusFlags.cs" />
     <Compile Include="Enumerations\World.cs" />
     <Compile Include="FfxivProcess.cs" />
+    <Compile Include="Managers\PartyManager.cs" />
     <Compile Include="Objects\Aura.cs" />
     <Compile Include="Objects\Auras.cs" />
+    <Compile Include="Objects\PartyMember.cs" />
     <Compile Include="Objects\SpellCastInfo.cs" />
     <Compile Include="Managers\GameObjectManager.cs" />
     <Compile Include="Managers\InventoryManager.cs" />
@@ -66,6 +68,7 @@
     <Compile Include="Objects\LocalPlayer.cs" />
     <Compile Include="Objects\Minion.cs" />
     <Compile Include="Objects\RemoteObject.cs" />
+    <Compile Include="Offsets\Structs\PartyOffsets.cs" />
     <Compile Include="Offsets\Structs\TargetOffsets.cs" />
     <Compile Include="Structures\AuraData.cs" />
     <Compile Include="Structures\Stats.cs" />
