--- a/MemLib.Ffxiv/MemLib.Ffxiv.csproj
+++ b/MemLib.Ffxiv/MemLib.Ffxiv.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -87,6 +88,16 @@
     <Compile Include="Offsets\Offsets.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Structures\Vector3.cs" />
+    <Compile Include="XivApi\JsonParser.cs" />
+    <Compile Include="XivApi\Models\BaseRequest.cs" />
+    <Compile Include="XivApi\Models\Character\AchievementResult.cs" />
+    <Compile Include="XivApi\Models\Character\CharacterRequest.cs" />
+    <Compile Include="XivApi\Models\Character\CharacterResult.cs" />
+    <Compile Include="XivApi\Models\Character\CharacterSearchResult.cs" />
+    <Compile Include="XivApi\Models\Character\ClassJobResult.cs" />
+    <Compile Include="XivApi\Models\Search\PaginationResult.cs" />
+    <Compile Include="XivApi\Models\Search\SearchResult.cs" />
+    <Compile Include="XivApi\XivApiClient.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MemLib\MemLib.csproj">
@@ -98,5 +109,6 @@
     <Content Include="signatures.xml" />
     <Content Include="offsets.xml" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
